// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`package.json should include build:artifact when project uses artifact practice 1`] = `
"{
  "devDependencies": {
    "typescript": "@declapract{check.minVersion('5.4.5')}",
    "@tsconfig/node-lts-strictest": "@declapract{check.minVersion('18.12.1')}"
  },
  "scripts": {
    "build:clean": "rm dist/ -rf",
    "build:compile": "tsc -p ./tsconfig.build.json",
    "build": "npm run build:clean && npm run build:compile && npm run build:artifact",
    "test:types": "tsc -p ./tsconfig.json --noEmit"
  }
}
"
`;

exports[`package.json should include not include build:artifact when project does not use artifact practice 1`] = `
"{
  "devDependencies": {
    "typescript": "@declapract{check.minVersion('5.4.5')}",
    "@tsconfig/node-lts-strictest": "@declapract{check.minVersion('18.12.1')}"
  },
  "scripts": {
    "build:clean": "rm dist/ -rf",
    "build:compile": "tsc -p ./tsconfig.build.json",
    "build": "npm run build:clean && npm run build:compile",
    "test:types": "tsc -p ./tsconfig.json --noEmit"
  }
}
"
`;
